Card #64: Fixed mood Tracking yearly pixels height overflow

--- a/components/tools/moodTracking/MoodTracking.module.css
+++ b/components/tools/moodTracking/MoodTracking.module.css
@@ -59,7 +59,7 @@
     min-height: 442px;
 
     .calendarRow{
-        height: 540px;
+        min-height: 540px;
         margin-bottom: 20px;
     }
 
